# todo-web-app

./: .gitignore  QWEN.md  corrected_tools.py  docker-compose.yml  test_chatbot_refresh.py  test_fix.py  test_user_association.py
console-todo-app/: main.py  pyproject.toml  tasks.json
docs/: kubernetes-deployment.md
scripts/: comprehensive-tests.sh  deploy.sh  health-check.sh  scale-services.sh  test-containers.sh  validate-deployment.sh
todo-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  analytics.py  e2e_test.py  install_requirements.bat  install_requirements.sh  main.py  pyproject.toml  requirements.txt  test_chat_endpoint.py  test_gemini_chatbot.py  test_integration.py
todo-backend/alembic/: env.py
todo-backend/api/: chatbot.py
todo-backend/database/: __init__.py
todo-backend/helm-chart/: Chart.yaml  values.yaml
todo-backend/helm-chart/templates/: configmap.yaml  deployment.yaml  secret.yaml
todo-backend/mcp/: __init__.py  session_manager.py  tools.py  tools_backup.py
todo-backend/models/: conversation.py  message.py  todo.py  user.py
todo-backend/services/: conversation_service.py  message_service.py  todo_service.py
todo-backend/src/utils/: logging.py  validation.py
todo-backend/tests/: integration_test_chatbot.py  integration_test_chatbot_clean.py
todo-backend/todo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
todo-chatbot/: main.py  pyproject.toml
todo-chatbot-backend/: requirements.txt
todo-chatbot-frontend/: main.py  package-lock.json  package.json  pyproject.toml
(+219 files in other folders)
